fix tenant form on small screens

--- a/frontend/src/app/property-details/property-details.component.css
+++ b/frontend/src/app/property-details/property-details.component.css
@@ -1,5 +1,6 @@
 .property-details {
   position: relative;
+  height: 100%;
 }
 
 .not-visible {
